Add update functionality [delivers #184401285]
